name:                url-shortner
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/vijayanant/url-shortner
license:             BSD3
license-file:        LICENSE
author:              Vijay Anant
maintainer:          example@example.com
copyright:           2017 Vijay Anant
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     IdGenerator, WebServer, Database
  build-depends:       base        >= 4.7      && < 5
                     , hashids     >= 1.0.2.3  && < 1.1
                     , bytestring  >= 0.10.8.1 && < 0.11
                     , hedis       >= 0.9.8    && < 0.10
                     , scotty      >= 0.11.0   && < 0.12
                     , text        >= 1.2.2.1  && < 1.2.3
                     , network     >= 2.6.3.2 && < 2.6.4
                     , network-uri >= 2.6.1.0  && < 2.6.2
                     , time        >= 1.6.0.1  && < 1.7
  default-language:    Haskell2010

executable url-shortner-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                      , url-shortner
  default-language:    Haskell2010

test-suite url-shortner-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , url-shortner
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/vijayanant/url-shortner
